Closed Bug 898653 Opened 13 years ago Closed 13 years ago

Lots of warnings 'C4003' when compiling on MSVC - not enough actual parameters for macro 'MOZ_ASSUME_UNREACHABLE'

Categories

(Core :: JavaScript Engine, defect)

All
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: TimAbraldes, Assigned: till)

Details

Attachments

(1 file)

These seem to mostly come from YarrParser.h but I've also seen some in YarrCanonicalizeUCS2.h
Most of the warnings are from Yarr and can be fixed by changing our definition of Yarr's ASSERT_NOT_REACHED. The same holds for the blink-imported Decimal stuff, too. That's in MFBT, but I don't think Waldo has to review that. The only location where we're really missing a reason is in IonCaches.cpp. I hope the one I added makes sense.
Attachment #782136 - Flags: review?(kvijayan)
Assignee: general → till
Comment on attachment 782136 [details] [diff] [review] Quell 'not enough parameters for macro' warnings in MSVC Review of attachment 782136 [details] [diff] [review]: ----------------------------------------------------------------- Comments are just suggestions, your call. ::: js/src/assembler/wtf/Assertions.h @@ +43,5 @@ > #define ASSERT_UNUSED(variable, assertion) do { \ > (void)variable; \ > ASSERT(assertion); \ > } while (0) > +#define ASSERT_NOT_REACHED() MOZ_ASSUME_UNREACHABLE("") MOZ_ASSUME_UNREACHABLE("Assertions.h"), maybe? ::: mfbt/decimal/moz-decimal-utils.h @@ +31,5 @@ > #undef ASSERT > #endif > #define ASSERT MOZ_ASSERT > > +#define ASSERT_NOT_REACHED() MOZ_ASSUME_UNREACHABLE("") MOZ_ASSUME_UNREACHABLE("moz-decimal-utils.h"), maybe?
Attachment #782136 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/752a6805b83b Thanks for the review. I went with "wtf/Assertions.h", because we have multiple files with that name.
Hardware: x86_64 → All
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: