Bug 898653 - Quell 'not enough parameters for macro' warnings in MSVC. r=djvj